# TVRQC-BOT

./: .gitignore  README.md  keep_alive.py  main.py  pyproject.toml  requirements.txt
cogs/: commands.py
